"model not ready"

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-xmfFxw8Bzol6v7kKQhQ2Om8mOO2r5p0Bbb+zAVa0Ukg8bABVp0tjC6kGkcg5QQRh" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -22,7 +23,7 @@
           
             <div class="col-12 col-md-6 text-right contact-info">
                 <p class="text-uppercase mb-0">United Nations Human Settlement Programme</p>
-                <p class="mb-0">P.O.Box 107, Kathmandu, Nepal | Sanepa Height, Lalitpur, Nepal</p>
+                <p class="mb-0">P.O.Box 107, Kathmandu, Nepal | Sanepa, Lalitpur, Nepal</p>
                 <p class="mb-0"><a href="mailto:unhabitat.nepal@unhabitat.org.np" class="text-primary">unhabitat.nepal@unhabitat.org.np</a> | <a href="http://www.unhabitat.org.np" class="text-primary">www.unhabitat.org.np</a></p>
                 <h5 class="text-uppercase text-primary mt-2">FOR BETTER URBAN FUTURE</h5>
             </div>
