--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="option search-option">
             <div class="search-form">
-                <form action="{{ url_for('search_inventory') }}" method="GET">
+                <form action="{{ url_for('view_inventory') }}" method="GET">
                     <div class="search-wrapper">
                         <input class="search-input" type="search" name="search_query" placeholder="Search" aria-label="Search"> &nbsp;
                         <button class="search-button btn btn-outline-primary" type="submit">
