--- a/templates/update_attendance.html
+++ b/templates/update_attendance.html
@@ -34,8 +34,14 @@
             <label for="remarks">Remarks:</label>
             <input type="text" class="form-control" id="remarks" name="remarks" value="{{ attendance.remarks }}" required>
         </div>
-        <button type="submit" class="btn btn-primary">Update</button>
+        <button type="submit" class="btn btn-primary" onclick="showPopup()">Update</button>
         <a href="{{ url_for('view_attendance') }}" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
+
+<script>
+    function showPopup() {
+        alert("Attendance updated");
+    }
+</script>
 {% endblock %}
