--- a/templates/view_projects.html
+++ b/templates/view_projects.html
@@ -7,9 +7,15 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th><a href="{{ url_for('view_projects', sort_order='asc', search_query=search_query) }}">Project Name</a></th>
-                        <th><a href="{{ url_for('view_projects', sort_order='asc', search_query=search_query) }}">Project ID</a></th>
-                        <th><a href="{{ url_for('view_projects', sort_order='asc', search_query=search_query) }}">Donor</a></th>
+                        <th>
+                            <a href="{{ url_for('view_projects', sort_by='proj_name', sort_order=sort_order, search_query=search_query) }}">Project Name</a>
+                        </th>
+                        <th>
+                            <a href="{{ url_for('view_projects', search_query=search_query) }}">Project ID</a>
+                        </th>
+                        <th>
+                            <a href="{{ url_for('view_projects', search_query=search_query) }}">Donor</a>
+                        </th>
                         <th><strong>Description</strong></th>
                         {% if session['user_id'] == 'ict' or session['user_id'] == 'operator' %}
                             <th><strong>Action</strong></th>
@@ -17,7 +23,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for project in projects %}
+                    {% for project in projects.items %}
                         <tr>
                             <td>{{ project.proj_name }}</td>
                             <td>{{ project.proj_id }}</td>
@@ -45,7 +51,7 @@
         <ul class="pagination justify-content-end">
             {% if projects.has_prev %}
                 <li class="page-item">
-                    <a class="page-link" href="{{ url_for('view_projects', page=projects.prev_num, search_query=search_query) }}">Previous</a>
+                    <a class="page-link" href="{{ url_for('view_projects', page=projects.prev_num, sort_by=sort_by, sort_order=sort_order, search_query=search_query) }}">Previous</a>
                 </li>
             {% else %}
                 <li class="page-item disabled">
@@ -61,7 +67,7 @@
                         </li>
                     {% else %}
                         <li class="page-item">
-                            <a class="page-link" href="{{ url_for('view_projects', page=num, search_query=search_query) }}">{{ num }}</a>
+                            <a class="page-link" href="{{ url_for('view_projects', page=num, sort_by=sort_by, sort_order=sort_order, search_query=search_query) }}">{{ num }}</a>
                         </li>
                     {% endif %}
                 {% else %}
@@ -73,7 +79,7 @@
 
             {% if projects.has_next %}
                 <li class="page-item">
-                    <a class="page-link" href="{{ url_for('view_projects', page=projects.next_num, search_query=search_query) }}">Next</a>
+                    <a class="page-link" href="{{ url_for('view_projects', page=projects.next_num, sort_by=sort_by, sort_order=sort_order, search_query=search_query) }}">Next</a>
                 </li>
             {% else %}
                 <li class="page-item disabled">
