--- a/templates/add_inventory.html
+++ b/templates/add_inventory.html
@@ -88,7 +88,7 @@
     <div class="form-group">
       <label for="staff">Custodian Name:</label>
       <select class="form-control" id="staff" name="staff">
-        <option value="">Select a Custodian</option> <!-- Added prewritten option -->
+        <option value="">Select a Custodian</option> 
         {% for staff_member in staff_members %}
         <option value="{{ staff_member.staff_personal_id }}">{{ staff_member.first_name }} {{ staff_member.last_name }}</option>
         {% endfor %}
@@ -109,41 +109,66 @@
         <option value="no">No</option>
         <option value="disposal">Disposal</option>
       </select>
-    </div>
+    </div><br>
     <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+</form>
 </div>
 
-<!-- Pop-up element -->
-<div id="popup" style="display: none;">Pop-up message goes here</div>
+<div class="modal" id="successModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Inventory Added</h5>
+      </div>
+      <div class="modal-body">
+        <p>Inventory has been successfully added.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-custom" data-bs-dismiss="modal">Ok</button>
+      </div>
+    </div>
+  </div>
+</div>
 
-{% block scripts %}
+<style>
+  .btn-custom {
+    background-color: rgb(81, 178, 250);
+    color: white;
+  }
+</style>
+
 <script>
-  // JavaScript to hide placeholder text when the input is focused
-  const inputs = document.querySelectorAll('input, textarea');
-
-  inputs.forEach((input) => {
-    const placeholderText = input.getAttribute('placeholder');
-
-    input.addEventListener('focus', () => {
-      input.setAttribute('placeholder', '');
-    });
-
-    input.addEventListener('blur', () => {
-      if (input.value === '') {
-        input.setAttribute('placeholder', placeholderText);
-      }
-    });
+  document.querySelector('form').addEventListener('submit', function(event) {
+    var isFormValid = validateForm(); // Function to validate the form (check if all required fields are filled)
+    
+    if (isFormValid) {
+      showSuccessModal();
+    } else {
+      event.preventDefault(); // Prevent form submission if the form is not valid
+    }
   });
 
-  // Show the pop-up message after submitting the form
-  const popup = document.getElementById('popup');
-  popup.style.display = 'block';
+  function showSuccessModal() {
+    var modal = new bootstrap.Modal(document.getElementById('successModal'));
+    modal.show();
+  }
 
-  // Hide the pop-up message after 3 seconds
-  setTimeout(function() {
-    popup.style.display = 'none';
-  }, 3000);
+  function validateForm() {
+    // Add your form validation logic here
+    // Return true if the form is valid, false otherwise
+    // Example: Check if all required fields are filled
+    var requiredFields = document.querySelectorAll('[required]');
+    var isFormValid = true;
+    
+    for (var i = 0; i < requiredFields.length; i++) {
+      if (!requiredFields[i].value) {
+        isFormValid = false;
+        break;
+      }
+    }
+    
+    return isFormValid;
+  }
 </script>
 {% endblock %}
-{% endblock %}
+
