--- a/templates/add_projects.html
+++ b/templates/add_projects.html
@@ -25,7 +25,7 @@
         <option value="no">No</option>
       </select>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary" onclick="showPopup()">Submit</button>
   </form>
 
 </div>
@@ -47,6 +47,9 @@
       }
     });
   });
+
+  function showPopup() {
+      alert("Project Added")}
 </script>
 
 {% endblock %}
