--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    
+</head>
     <!-- Add Font Awesome stylesheet link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-xmfFxw8Bzol6v7kKQhQ2Om8mOO2r5p0Bbb+zAVa0Ukg8bABVp0tjC6kGkcg5QQRh" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -24,7 +26,8 @@
             <div class="col-12 col-md-6 text-right contact-info">
                 <p class="text-uppercase mb-0">United Nations Human Settlement Programme</p>
                 <p class="mb-0">P.O.Box 107, Kathmandu, Nepal | Sanepa, Lalitpur, Nepal</p>
-                <p class="mb-0"><a href="mailto:unhabitat.nepal@unhabitat.org.np" class="text-primary">unhabitat.nepal@unhabitat.org.np</a> | <a href="http://www.unhabitat.org.np" class="text-primary">www.unhabitat.org.np</a></p>
+                <p class="mb-0"><a href="mailto:unhabitat.nepal@unhabitat.org.np" class="text-primary">unhabitat.nepal@unhabitat.org.np</a> | <a href="http://www.unhabitat.org.np" class="text-primary" target="_blank">www.unhabitat.org.np</a>
+                </p>
                 <h5 class="text-uppercase text-primary mt-2">FOR BETTER URBAN FUTURE</h5>
             </div>
         </div><br>
